--- a/CarDealership/Views/_ViewImports.cshtml
+++ b/CarDealership/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CarDealership
 @using CarDealership.Models
+@using CarDealership.Core.Models.Car
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
