--- a/CarDealership/Views/Car/Edit.cshtml
+++ b/CarDealership/Views/Car/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarModel
 
 @{
-    ViewBag.Title = "All Cars"; 
+    ViewBag.Title = "Edit Car"; 
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
