--- a/CarDealership/Views/_ViewImports.cshtml
+++ b/CarDealership/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CarDealership
 @using CarDealership.Models
 @using CarDealership.Core.Models.Car
+@using CarDealership.Core.Models.Dealer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
