--- a/CarDealership/Views/Home/Index.cshtml
+++ b/CarDealership/Views/Home/Index.cshtml
@@ -1,8 +1,56 @@
-﻿@{
+﻿@model IEnumerable<CarHomeModel>
+@{
     ViewData["Title"] = "Home Page";
+    bool first = true;
+
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if (Model.Count() == 0)
+{
+    <div class="mt-4 p-5 bg-light">
+        <h1 class="display-4">You can find your car here!</h1>
+        <p class="lead">
+            There are no cars here yet!
+        </p>
+        <hr class="my-4">
+        <p class="lead">
+            @if (this.User?.Identity != null && this.User.Identity.IsAuthenticated)
+            {
+                <a asp-controller="Car" asp-action="Add" class="btn btn-primary btn-lg"
+           role="button">Add Car</a>
+            }
+        </p>
+    </div>
+}
+
+<div class="mb-5"></div>
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        @foreach (var car in Model)
+        {
+            <div class="carousel-item @(first ? "active" : string.Empty)">
+
+                <img class="d-block w-30" style="height:250px"
+                 src="@car.ImageUrl" alt="@car.Model">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>
+                        <a class="btn btn-primary" asp-controller="Car" asp-action="Details"
+                       asp-route-id="@car.Id"> @car.Model</a>
+                    </h5>
+                </div>
+            </div>
+
+
+            first = false;
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
