--- a/CarDealership/Views/Car/Mine.cshtml
+++ b/CarDealership/Views/Car/Mine.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarModel
+﻿@model IEnumerable<CarServiceModel>
 
 @{
     ViewBag.Title = "My Cars"; 
@@ -6,3 +6,17 @@
 
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
+
+@if (Model.Any())
+{
+    <div class="row">
+        @foreach (var car in Model)
+        {
+            <partial name="_CarPartial" model="@car" />
+        }
+    </div>
+}
+else
+{
+    <h3 class="text-center">You have no cars!</h3>
+}
