--- a/CarDealership/Views/Shared/_Layout.cshtml
+++ b/CarDealership/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="All">All Cars</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="All">Cars</a>
                         </li>
                         @if (this.User?.Identity != null && this.User.Identity.IsAuthenticated)
                         {
