Buy/Sell option

--- a/CarDealership/Views/Shared/_CarPartial.cshtml
+++ b/CarDealership/Views/Shared/_CarPartial.cshtml
@@ -24,7 +24,7 @@
                 {
                     <form class="input-group-sm" asp-controller="Car"
                   asp-action="Buy" asp-route-id="@Model.Id" method="post">
-                        <input class="btn btn-primary" type="submit" value="Price" />
+                        <input class="btn btn-primary" type="submit" value="Buy" />
                     </form>
                 }
                 else
