--- a/CarDealership/Views/Home/Index.cshtml
+++ b/CarDealership/Views/Home/Index.cshtml
@@ -23,34 +23,22 @@
     </div>
 }
 
-<div class="mb-5"></div>
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        @foreach (var car in Model)
-        {
-            <div class="carousel-item @(first ? "active" : string.Empty)">
 
-                <img class="d-block w-30" style="height:250px"
-                 src="@car.ImageUrl" alt="@car.Model">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>
-                        <a class="btn btn-primary" asp-controller="Car" asp-action="Details"
-                       asp-route-id="@car.Id"> @car.Model</a>
-                    </h5>
-                </div>
+<div class="text-center row">
+    @foreach (var car in Model)
+    {
+        <div class="card col-4" style="width: 20rem;">
+            <img class="card-img-top" style="width: 18rem;"
+             src="@car.ImageUrl" alt="Car Image">
+            <div class="card-body">
+                <h5 class="card-title mt-1">@car.Model</h5>                
             </div>
 
-
-            first = false;
-        }
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+            <form>
+                <a class="btn btn-primary" asp-controller="Car" asp-action="Details"
+               asp-route-id="@car.Id">@car.Model</a>
+            </form>
+        </div>
+    }
 </div>
