--- a/CarDealership/Views/_ViewImports.cshtml
+++ b/CarDealership/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using CarDealership.Models
 @using CarDealership.Core.Models.Car
 @using CarDealership.Core.Models.Dealer;
+@using CarDealership.Core.Models.Motor;
+@using CarDealership.Core.Models.Truck;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
