--- a/CarDealership/Views/Motor/Edit.cshtml
+++ b/CarDealership/Views/Motor/Edit.cshtml
@@ -1,5 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MotorModel
+
 @{
+    ViewBag.Title = "Edit Motor"; 
+}
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<partial name="_MotorFormPartial" model="@Model" />
+
+@section Scripts {
+        <partial name="_ValidationScriptsPartial" />
 }
