--- a/CarDealership/Views/Motor/Mine.cshtml
+++ b/CarDealership/Views/Motor/Mine.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<MotorServiceModel>
+
 @{
+    ViewBag.Title = "My Motors";
+}
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+@if (Model.Any())
+{
+    <div class="row">
+        @foreach (var motor in Model)
+        {
+            <partial name="_MotorPartial" model="@motor" />
+        }
+    </div>
+}
+else
+{
+    <h3 class="text-center">You have no motors!</h3>
 }
