--- a/CarDealership/Views/Truck/Edit.cshtml
+++ b/CarDealership/Views/Truck/Edit.cshtml
@@ -1,5 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model TruckModel
+
 @{
+    ViewBag.Title = "Edit Truck";
+}
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<partial name="_TruckFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
 }
