adding admin functionallities of cars

--- a/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
@@ -4,3 +4,11 @@
 }
 
 <h2 class="display-4">Admin Home</h2>
+<hr />
+
+<a asp-area="Admin" asp-controller="Car" asp-action="Mine"
+   class="btn btn-primary">My Cars</a>
+<a asp-area="Admin" asp-controller="Sels" asp-action="All"
+   class="btn btn-primary">All Sels</a>
+<a asp-area="Admin" asp-controller="Users" asp-action="All"
+   class="btn btn-primary">All Users</a>
