--- a/CarDealership/Views/Shared/_CarPartial.cshtml
+++ b/CarDealership/Views/Shared/_CarPartial.cshtml
@@ -11,29 +11,29 @@
             </h6>
             <h6>@(Model.IsBought ? "Sold" : "Not Bought")</h6>
             <br />
-            <a asp-controller="Car" asp-action="Details" asp-route-id="@Model.Id"
+            <a asp-area="" asp-controller="Car" asp-action="Details" asp-route-id="@Model.Id"
                class="btn btn-success">Details</a>
             @if (this.User.Identity.IsAuthenticated)
             {
-                <a asp-controller="Car" asp-action="Edit" asp-route-id="@Model.Id"
+                <a asp-area="" asp-controller="Car" asp-action="Edit" asp-route-id="@Model.Id"
                class="btn btn-warning">Edit</a>
-                <a asp-controller="Car" asp-action="Delete" asp-route-id="@Model.Id"
+                <a asp-area="" asp-controller="Car" asp-action="Delete" asp-route-id="@Model.Id"
                class="btn btn-danger">Delete</a>
                 <p></p>
                 @if (!Model.IsBought)
                 {
-                    <form class="input-group-sm" asp-controller="Car"
+                    <form class="input-group-sm" asp-area="" asp-controller="Car"
                   asp-action="Buy" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Buy" />
                     </form>
                 }
-                @*else
+                else
                 {
-                    <form asp-controller="Car" asp-action="Sell"
+                    <form asp-area="" asp-controller="Car" asp-action="Sell"
                   asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Sell" />
                     </form>
-                }*@
+                }
             }
         </div>
     </div>
