--- a/CarDealership/Areas/Admin/Views/_ViewImports.cshtml
+++ b/CarDealership/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using CarDealership.Core.Models.Dealer;
 @using CarDealership.Core.Models.Motor;
 @using CarDealership.Core.Models.Truck;
+@using CarDealership.Areas.Admin.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
