--- a/CarDealership/Areas/Admin/Views/User/All.cshtml
+++ b/CarDealership/Areas/Admin/Views/User/All.cshtml
@@ -35,9 +35,9 @@
                     }
                 </td>
                 <td>
-                    <form asp-area="Admin" asp-controller="User" asp-action="Forget" method="post">
+                    <form asp-area="Admin" asp-controller="User" asp-action="Clear" method="post">
                         <input type="hidden" value="@user.UserId">
-                        <button type="submit" class="btn btn-danger">Forget</button>
+                        <button type="submit" class="btn btn-danger">Clear</button>
                     </form>
                 </td>
             </tr>
