adding Admin Truck services

--- a/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
@@ -10,5 +10,13 @@
    class="btn btn-primary">My Cars</a>
 <a asp-area="Admin" asp-controller="Sels" asp-action="All"
    class="btn btn-primary">All Sels</a>
+<a asp-area="Admin" asp-controller="Motor" asp-action="Mine"
+   class="btn btn-primary">My Motors</a>
+<a asp-area="Admin" asp-controller="Sels" asp-action="All"
+   class="btn btn-primary">All Sels</a>
+<a asp-area="Admin" asp-controller="Truck" asp-action="Mine"
+   class="btn btn-primary">My Trucks</a>
+<a asp-area="Admin" asp-controller="Sels" asp-action="All"
+   class="btn btn-primary">All Sels</a>
 <a asp-area="Admin" asp-controller="Users" asp-action="All"
    class="btn btn-primary">All Users</a>
