--- a/CarDealership/Areas/Admin/Views/Car/Mine.cshtml
+++ b/CarDealership/Areas/Admin/Views/Car/Mine.cshtml
@@ -11,7 +11,7 @@
 
 @if (!Model.AddedCars.Any())
 {
-    <h2 class="text-center">You have no added cars yet!</h2>
+    <h2 class="text-center">You have no added cars!</h2>
 }
 
 <div class="row">
@@ -25,7 +25,7 @@
 
 @if (!Model.SoldCars.Any())
 {
-    <h2 class="text-center">You have no cars yet!</h2>
+    <h2 class="text-center">You have no cars!</h2>
 }
 
 <div class="row">
