--- a/CarDealership/Areas/Admin/Views/Motor/Mine.cshtml
+++ b/CarDealership/Areas/Admin/Views/Motor/Mine.cshtml
@@ -1,5 +1,37 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MyMotorsViewModel
+
 @{
+    ViewBag.Title = "My Motors";
 }
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<h4>My Added Motors</h4>
+
+@if (!Model.AddedMotors.Any())
+{
+    <h2 class="text-center">You have no added motors!</h2>
+}
+
+<div class="row">
+    @foreach (var motor in Model.AddedMotors)
+    {
+        @await Html.PartialAsync("~/Views/Shared/_MotorPartial.cshtml", motor)
+        ;
+    }
+</div>
+
+<h4>My Motors</h4>
+
+@if (!Model.SoldMotors.Any())
+{
+    <h2 class="text-center">You have no motors!</h2>
+}
+
+<div class="row">
+    @foreach (var motor in Model.SoldMotors)
+    {
+        @await Html.PartialAsync("~/Views/Shared/_MotorPartial.cshtml", motor)
+    }
+</div>
