--- a/CarDealership/Areas/Admin/Views/Truck/Mine.cshtml
+++ b/CarDealership/Areas/Admin/Views/Truck/Mine.cshtml
@@ -1,5 +1,37 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MyTrucksViewModel
+
 @{
+    ViewBag.Title = "My Trucks";
 }
+
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<h4>My Added Trucks</h4>
+
+@if (!Model.AddedTrucks.Any())
+{
+    <h2 class="text-center">You have no added trucks!</h2>
+}
+
+<div class="row">
+    @foreach (var truck in Model.AddedTrucks)
+    {
+        @await Html.PartialAsync("~/Views/Shared/_TruckPartial.cshtml", truck)
+        ;
+    }
+</div>
+
+<h4>My Trucks</h4>
+
+@if (!Model.SoldTrucks.Any())
+{
+    <h2 class="text-center">You have no trucks!</h2>
+}
+
+<div class="row">
+    @foreach (var truck in Model.SoldTrucks)
+    {
+        @await Html.PartialAsync("~/Views/Shared/_TruckPartial.cshtml", truck)
+    }
+</div>
