adding admin in role filter

--- a/CarDealership/Areas/Admin/Views/User/All.cshtml
+++ b/CarDealership/Areas/Admin/Views/User/All.cshtml
@@ -11,7 +11,7 @@
     <thead>
         <tr>
             <th><label>Email</label></th>
-            <th><label>Full Name</label></th>
+            @*<th><label>Full Name</label></th>*@
             <th><label>Phone Number</label></th>
             <th><label>User Is Agent</label></th>
             <th><label>Actions</label></th>
@@ -22,7 +22,7 @@
         {
             <tr>
                 <td><label>@user.Email</label></td>
-                <td><label>@user.FullName</label></td>
+                @*<td><label>@user.FullName</label></td>*@
                 <td><label>@user.PhoneNumber</label></td>
                 <td>
                     @if (string.IsNullOrEmpty(user.PhoneNumber) == false)
