--- a/CarDealership/Views/_ViewImports.cshtml
+++ b/CarDealership/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using CarDealership.Core.Models.Dealer;
 @using CarDealership.Core.Models.Motor;
 @using CarDealership.Core.Models.Truck;
+@using CarDealership.Core.Contracts;
+@using CarDealership.Extensions;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
