--- a/CarDealership/Views/Motor/Details.cshtml
+++ b/CarDealership/Views/Motor/Details.cshtml
@@ -1,4 +1,6 @@
 ﻿@model MotorDetailsModel
+@inject IMotorService motors
+@inject IDealerService dealers
 
 @{
     ViewBag.Title = "Motor Details";
@@ -25,18 +27,21 @@
             <div class="form-inline">
                 @if (this.User.Identity.IsAuthenticated)
                 {
+                    @if (await this.motors.HasDealerWithId(Model.Id, this.User.Id()))
+                    {
                     <a class="btn btn-warning" asp-controller="Motor" asp-action="Edit"
                    asp-route-id="@Model.Id">Edit</a>
                     <a class="ml-2 btn btn-danger" asp-controller="Motor" asp-action="Delete"
                    asp-route-id="@Model.Id">Delete</a>
-                    @if (!Model.IsBought)
+                    }
+                    @if (!Model.IsBought && await this.dealers.ExistsUserIdAsync(this.User.Id()))
                     {
                         <form class="ml-2" asp-controller="Motor"
                       asp-action="Buy" asp-route-id="@Model.Id" method="post">
                             <input class="btn btn-primary" type="submit" value="Buy" />
                         </form>
                     }
-                    else
+                    else if (await this.motors.IsBoughtByUserWithId(Model.Id, this.User.Id()))
                     {
                         <form class="ml-2" asp-controller="Motor" asp-action="Sell"
                       asp-route-id="@Model.Id" method="post">
