--- a/CarDealership/Areas/Admin/Views/User/All.cshtml
+++ b/CarDealership/Areas/Admin/Views/User/All.cshtml
@@ -35,8 +35,8 @@
                     }
                 </td>
                 <td>
-                    <form asp-area="Admin" asp-controller="User" asp-action="Clear" method="post">
-                        <input type="hidden" value="@user.UserId">
+                    <form asp-area="Admin" asp-controller="User" asp-action="Clear" asp-route-userId="@user.UserId" method="post">
+                        @*<input type="hidden" value="@user.UserId">*@
                         <button type="submit" class="btn btn-danger">Clear</button>
                     </form>
                 </td>
