adding changes to Admin area

--- a/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CarDealership/Areas/Admin/Views/Admin/Index.cshtml
@@ -8,15 +8,15 @@
 
 <a asp-area="Admin" asp-controller="Car" asp-action="Mine"
    class="btn btn-primary">My Cars</a>
-<a asp-area="Admin" asp-controller="Sales" asp-action="All"
-   class="btn btn-primary">All Sales</a>
+@*<a asp-area="Admin" asp-controller="Sales" asp-action="All"
+   class="btn btn-primary">All Sales</a>*@
 <a asp-area="Admin" asp-controller="Motor" asp-action="Mine"
    class="btn btn-primary">My Motors</a>
-<a asp-area="Admin" asp-controller="Sales" asp-action="All"
-   class="btn btn-primary">All Sales</a>
+@*<a asp-area="Admin" asp-controller="Sales" asp-action="All"
+   class="btn btn-primary">All Sales</a>*@
 <a asp-area="Admin" asp-controller="Truck" asp-action="Mine"
    class="btn btn-primary">My Trucks</a>
-<a asp-area="Admin" asp-controller="Sales" asp-action="All"
-   class="btn btn-primary">All Sales</a>
+@*<a asp-area="Admin" asp-controller="Sales" asp-action="All"
+   class="btn btn-primary">All Sales</a>*@
 <a asp-area="Admin" asp-controller="User" asp-action="All"
    class="btn btn-primary">All Users</a>
