--- a/CarDealership/Views/Shared/_Layout.cshtml
+++ b/CarDealership/Views/Shared/_Layout.cshtml
@@ -56,26 +56,14 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Dealer" asp-action="BeADealer">Be a Dealer</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Dealer" asp-action="BeADealer">Be a Member</a>
                             </li>
                         }
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">                        
-                        @*@if (this.User?.Identity != null && this.User.Identity.IsAuthenticated)
-                        {
-
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Car" asp-action="Mine">My Cars</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Car" asp-action="Add">Add Car</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Dealer" asp-action="BeADealer">Be a Dealer</a>
-                            </li>
-                        }*@
+                    <ul class="navbar-nav flex-grow-1">                      
+                       
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
