--- a/CarDealership/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CarDealership/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -56,7 +56,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Dealer" asp-action="BeADealer">Be a Member</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Dealer" asp-action="BeADealer">Be a Dealer</a>
                             </li>
                         }
                     </ul>
